[metadata]
name = Yaml8
version = 0.1.1
author = AppDevIn Sliver
author_email = teamprojectlive@example.com
description = Python package to make getting yaml easier and cleaner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AppDevIn/Yaml-Python
project_urls =
    Bug Tracker = https://github.com/AppDevIn/Yaml-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

